--- a/views/patients/add.ejs
+++ b/views/patients/add.ejs
@@ -11,8 +11,8 @@
     <div class="mb-3">
         <label for="gender" class="form-label">Gender</label>
         <select class="form-control" id="gender" name="gender" required>
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
+            <option value="M">Male</option>
+            <option value="F">Female</option>
         </select>
     </div>
     <div class="mb-3">
